--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,14 +1,30 @@
 {
   "compilerOptions": {
-    "module": "esnext",
     "target": "es5",
+    "lib": [
+      "dom",
+      "dom.iterable",
+      "esnext"
+    ],
+    "allowJs": false,
+    "skipLibCheck": true,
+    "esModuleInterop": true,
+    "strict": true,
+    "resolveJsonModule": true,
+    "module": "esnext",
     "sourceMap": true,
-    "experimentalDecorators": true,
     "jsx": "react",
+    "moduleResolution": "node",
     "allowSyntheticDefaultImports": true,
-    "strict": true
-  },
-  "exclude": [
-    "node_modules"
-  ]
+    "forceConsistentCasingInFileNames": true,
+    "noImplicitReturns": true,
+    "noImplicitThis": true,
+    "noImplicitAny": true,
+    "importHelpers": true,
+    "strictNullChecks": true,
+    "suppressImplicitAnyIndexErrors": true,
+    "noUnusedLocals": true,
+    "experimentalDecorators": true,
+    "emitDecoratorMetadata": true
+  }
 }
