--- a/package.json
+++ b/package.json
@@ -12,12 +12,16 @@
   "dependencies": {
     "@material-ui/core": "^3.9.2",
     "@material-ui/icons": "^3.0.2",
+    "firebase": "^5.9.0",
+    "mobx": "^5.9.0",
+    "mobx-react": "^5.4.3",
     "react": "^16.8.4",
     "react-dom": "^16.8.4",
     "tslib": "^1.9.3",
     "typeface-roboto": "0.0.54"
   },
   "devDependencies": {
+    "@types/node": "^11.11.3",
     "@types/react": "^16.8.7",
     "@types/react-dom": "^16.8.2",
     "typescript": "^3.3.3333"
